# trotd

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix  trotd.toml
.config/: nextest.toml
.github/workflows/: update-readme.yml
examples/: README.md  motd-setup.sh  profile-integration.sh  systemd-timer-refresh.sh
src/: cache.rs  config.rs  http.rs  main.rs  model.rs  render.rs
src/providers/: gitea.rs  github.rs  gitlab.rs  mod.rs
