[package]
name = "trotd"
version = "0.1.0"
edition = "2021"
rust-version = "1.89"
authors = ["schausberger"]
description = "Trending repositories of the day - minimal MOTD CLI"
license = "MIT"
repository = "https://github.com/schausberger/trotd"

[dependencies]
tokio = { version = "1.41", features = ["rt-multi-thread", "macros", "fs"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8"
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5"
anyhow = { version = "1.0.92", features = ["backtrace"] }
thiserror = "1.0.69"
dirs = "5.0"
async-trait = "0.1"
colored = "2.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
scraper = "0.20"
tokio-retry = "0.3"
regex = "1.10"

[dev-dependencies]
mockito = "1.6"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
